# Generating-random

./: CMakeLists.txt  Monte-Karlo plot.ipynb  README.md  blue_noise.cpp  blue_noise.h  blue_noise_main.cpp  consol_reader.h  halton.cpp  halton.h  main.cpp  random.cpp  random.h  sampler.cpp  sampler.h  scramble.cpp  scramble.h  script.py  sobol.cpp  sobol.h  Распределение_BlueNoise.ipynb
blue_noise/: a.out  blue_noise_1D.cpp  blue_noise_2D.cpp  blue_noise_main.cpp  blue_noise_test.cpp  bridson_bn.cpp  bridson_bn.csv  bridson_bn.h  dist.py  mitchels_bn.cpp  mitchels_bn.csv  mitchels_bn.h
blue_noise/visual/: blue_noise_1D.csv  blue_noise_2D.csv  blue_noise_visual.ipynb  start_noise.csv  start_noise_2D.csv
halton/: halton.cpp  halton.h
sobol/: sobol.cpp  sobol.h
uniform/: uniform.cpp  uniform.h
